change placeholder when country changes

--- a/example/lib/live_phone_example_web/live/page_live.html.leex
+++ b/example/lib/live_phone_example_web/live/page_live.html.leex
@@ -2,7 +2,7 @@
   <h1>LivePhone Demo</h1>
 
   <%= form_tag "#", phx_change: "change", phx_submit: "change" %>
-    <%= live_component(@socket, LivePhone.Component, value: "+14242424242", id: "phone", form: :user, field: :phone, preferred: ["US", "GB", "CA"]) %>
+    <%= live_component(@socket, LivePhone.Component, id: "phone", form: :user, field: :phone, preferred: ["US", "GB", "CA"], placeholder: "Phone") %>
   </form>
 </section>
 
