--- a/example/lib/live_phone_example_web/live/page_live.html.heex
+++ b/example/lib/live_phone_example_web/live/page_live.html.heex
@@ -1,9 +1,9 @@
 <section class="phx-hero">
   <h1>LivePhone Demo</h1>
 
-  <%= form_tag "#", phx_change: "change", phx_submit: "change" %>
-    <%= live_component(@socket, LivePhone.Component, id: "phone", form: :user, field: :phone, apply_format?: true, preferred: ["US", "GB", "CA"], placeholder: "Phone") %>
-  </form>
+  <.form for={:user} phx-change="change" phx-submit="change">
+    <.live_component module={LivePhone.Component} id="phone", form={:user} field={:phone} apply_format?={true} preferred={["US", "GB", "CA"]} placeholder="Phone" />
+  </.form>
 </section>
 
 <%= if assigns[:phone_number] != nil and assigns[:phone_number] != "" do %>
