--- a/example/lib/live_phone_example_web/live/page_live.html.heex
+++ b/example/lib/live_phone_example_web/live/page_live.html.heex
@@ -1,12 +1,14 @@
 <section class="phx-hero">
   <h1>LivePhone Demo</h1>
 
-  <.form for={:user} phx-change="change" phx-submit="change">
+  <.form :let={f} for={@changeset} as="phone" phx-change="change" phx-submit="submit">
     <.live_component module={LivePhone.Component} id="phone" form={:user} field={:phone} apply_format?={true} preferred={["US", "GB", "CA"]} placeholder="Phone" />
+
+    <button type="submit" class="mt-2">Submit</button>
   </.form>
 </section>
 
-<%= if assigns[:phone_number] != nil and assigns[:phone_number] != "" do %>
+<%= if not is_nil(@phone_number) and @phone_number != "" do %>
   <pre>Typing: <%= assigns[:phone_number] %></pre>
   <pre>Valid number?: <%= if assigns[:valid?], do: "Yes", else: "No" %></pre>
 <% end %>
